--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
               <strong> <%= current_user.email %></strong>
               | <%= link_to "Logout", destroy_user_session_path, method: :delete %>
               | Level: <%= current_user.level %>
+              |  <%= link_to "Purchase", new_charge_path %>
             </section>
             <section style="padding-top: 10px;text-align: center">
               <span data-remote="<%= edit_user_registration_path %>"
