Added anti-cheat function to spin page. You can no longer refresh to get a new question or category. Refreshing or going back during a question now automatically fails the questions.

--- a/app/views/play/display_questions.html.erb
+++ b/app/views/play/display_questions.html.erb
@@ -74,7 +74,7 @@
                 }
                 if (<%= current_user.active_player.isActivePlayer && !current_user.active_player.challenges.first.nil? %>){
                     $.ajax({
-                        url: "play/get_next_challenge_question",
+                        url: "play/continue_challenge",
                         type: 'PUT'
                     });
                 }
