--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -24,18 +24,24 @@
     <br>
 <% end %>
 <p>Meter: <%= current_user.active_player.meter%></p>
-<% if (!current_user.active_player.opponent.nil?) %>
-    <p>Opponent: <%= current_user.active_player.opponent.user.email%></p>
-<% end %>
 
 <div id="trophy">
   <% current_user.active_player.trophies.each do |trophy|  %>
-
+      <br><p>Me: </p>
       <img src= <%= trophy.icon_path%>>
-
+      <br>
   <% end %>
+
+<% if (!current_user.active_player.opponent.nil?) %>
+      <br><p><%= current_user.active_player.opponent.user.email%>: </p>
+      <% current_user.active_player.opponent.trophies.each do |trophy|  %>
+
+          <img src= <%= trophy.icon_path%>>
+      <% end %>
+<% end %>
+
 </div>
-<button onclick="Resign()" type="button" class="btn btn-primary">
+<br><br><button onclick="Resign()" type="button" class="btn btn-primary">
   RESIGN</button>
 
 <script type ="text/javascript" charset="utf-8">
