--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,36 +1,89 @@
 <div id="main" class="text-center">
-  <% current_user.players.each do |player| %>
-      <div class="text-center">
-
-        <% @has_opponent = 'none'%>
-        <% if (!player.opponent.nil?) %>
-            <% @has_opponent = player.opponent.user.email%>
-        <% end %>
-
-        <button id=<%= 'a' + player.id.to_s %> type="button" name=<%= player.id %> value= <%=player.id%> class="btn btn-primary btn-lg btn-block">
-          Trophies: <%=player.trophies.count %> Opponent: <%=@has_opponent%></button><br>
-      </div>
-      <script type ="text/javascript" charset="utf-8">
-          $(document).ready(function() {
-              $(<%= 'a' + player.id.to_s%>).click(function() {
-                  var currentPlayer = this.value;
-                  $.ajax({
-                              url: "play/get_selected_player",
-                              type: 'PUT',
-                              dataType: 'json',
-                              data: {'player_id' : currentPlayer},
-                              complete: PlayNow
-                          }
-                  )
-              })
-          });
-      </script>
-  <% end %>
+  
   <button onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-    + NEW GAME</button>
-  <br/>  <br/>
+    + NEW GAME</button><br>
+
+  <% current_user.players.each do |player|%>
+      <div class="text-center">
+        <% if player.isActivePlayer %>
+            <% has_opponent = 'Unmatched'
+               opponent_trophies = 0
+               if (!player.opponent.nil?)
+                 has_opponent = player.opponent.user.email
+                 opponent_trophies = player.opponent.trophies.count
+               end %>
+
+            <button style="background-color:mediumseagreen" id="<%= 'a' + player.id.to_s %>" input type="button" name="<%= player.id %>" value="<%=player.id%>" class="btn btn-primary btn-lg btn-block">
+              READY <%=has_opponent%> <%=player.trophies.count %>:<%= opponent_trophies %></button><br>
+            </div>
+            <script>
+                $(document).ready(function() {
+                    AssignFunctionality(<%= 'a' + player.id.to_s%>);
+                })
+            </script>
+        <% end %>
+  <% end %>
+
+  <% current_user.players.each do |player|%>
+      <div class="text-center">
+        <% if !player.isActivePlayer && !player.is_inactive%>
+            <% has_opponent = 'Unmatched'
+               opponent_trophies = 0
+               if (!player.opponent.nil?)
+                 has_opponent = player.opponent.user.email
+                 opponent_trophies = player.opponent.trophies.count
+               end %>
+
+            <button style="background-color:deepskyblue" id="<%= 'a' + player.id.to_s %>" input type="button" name="<%= player.id %>" value="<%=player.id%>" class="btn btn-primary btn-lg btn-block">
+              WAITING <%=has_opponent%> <%=player.trophies.count %>:<%= opponent_trophies %></button><br>
+            </div>
+            <script>
+                $(document).ready(function() {
+                    AssignFunctionality(<%= 'a' + player.id.to_s%>);
+                })
+            </script>
+        <% end %>
+  <% end %>
+
+  <% current_user.players.each do |player|%>
+      <div class="text-center">
+        <% if player.is_inactive %>
+            <% has_opponent = 'Unmatched'
+               opponent_trophies = 0
+               if (!player.opponent.nil?)
+                 has_opponent = player.opponent.user.email
+                 opponent_trophies = player.opponent.trophies.count
+               end %>
+
+            <button style="background-color:lightsteelblue" id="<%= 'a' + player.id.to_s %>" input type="button" name="<%= player.id %>" value="<%=player.id%>" class="btn btn-primary btn-lg btn-block">
+              GAME OVER <%=has_opponent%> <%=player.trophies.count %>:<%= opponent_trophies %></button><br>
+            </div>
+            <script>
+                $(document).ready(function() {
+                    AssignFunctionality(<%= 'a' + player.id.to_s%>);
+                })
+            </script>
+        <% end %>
+  <% end %>
 </div>
+
+
 <script>
+
+  function AssignFunctionality(id) {
+
+          $(id).click(function() {
+              var currentPlayer = this.value;
+              $.ajax({
+                          url: "play/get_selected_player",
+                          type: 'PUT',
+                          dataType: 'json',
+                          data: {'player_id' : currentPlayer},
+                          complete: PlayNow
+                      }
+              )
+          })
+  }
 
     <% if current_user.has_new_achievement %>
     var newAchievement = "You have a new Achievement\n<%= current_user.achievements.last.title %>"
