--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .container{
-  width: 450px;
+  width: 550px;
 }
 
 .links {
@@ -16,6 +16,7 @@ body {
 }
 
 #main {
+  padding-top: 10px;
 }
 
 input#un-mute {
