--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,8 +1,13 @@
-    <h1>Admin Dashboard</h1>
-    <!--Display these fields if a admin is logged in.-->
-    <% for user in @users %>
-        <%= user.email %>
-        <%= link_to "Remove User", admin_destroy_user_path(user), method: :delete %>
-        <br>
-    <% end %>
+<!--Display these fields if a admin is logged in.-->
 
+<h2>Users</h2>
+<ul>
+  <% for user in @users %>
+      <li>
+        <%=h user.email %>
+        - <%= link_to "Remove", admin_destroy_user_path(user), method: :delete %>
+      </li>
+  <% end %>
+</ul>
+<script>
+</script>
