Add the end of every question, the user now has the ability to submit a new question to be reviewed.

--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -24,7 +24,7 @@
             ChangePage()
         });
         $('#submit_question').click(function() {
-            $('body').load(<%= new_question_path %>);
+            $('body').load('<%= new_question_path %>');
         });
         $.ajax({
             url: "play/finish_question",
