--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Question</h1>
+<div class="text-center">
+  <h1>Submit A Question</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', questions_path %>
+  <%= link_to 'Back', '/', class: 'btn btn-primary' %>
+</div>
