--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
             <strong> <%= current_user.email %></strong>
             | <%= link_to "Logout", destroy_user_session_path, method: :delete %>
             | Level: <%= current_user.level %>
-            Points: <%= current_user.points %>
+            | <%= link_to "Purchase", new_charge_path %>
+            | Points: <%= current_user.points %>
             <section style="padding-top: 10px;text-align: center">
               <span data-remote="<%= edit_user_registration_path %>"
                     data-toggle="modal"
