Fixed index account bar overhang

--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -34,7 +34,7 @@
         {
             var meter = <%= current_user.active_player.meter %>;
 
-            if (meter == 3) {
+            if (meter == <%= PlayController::FULL_METER_AMOUNT%>) {
                 $('body').load('/play/display_full_meter_choice.html');
             }
             else if (<%= current_user.active_player.isActivePlayer && !current_user.active_player.challenges.first.nil? %>){
