--- a/app/views/play/display_new_game_page.erb
+++ b/app/views/play/display_new_game_page.erb
@@ -22,17 +22,24 @@
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <% for user in @users %>
-          <h2>Friends</h2>
-          <ul>
-            <% for user in @users %>
-                <li>
-                  <%=h user.email %>
-                  - <%= link_to "Add Friend" %>
-                </li>
-            <% end %>
-          </ul>
-      <% end %>
+      <h2>All Users</h2>
+      <ul>
+        <% for user in @users %>
+            <li>
+              <%=h user.email %>
+              - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+            </li>
+        <% end %>
+      </ul>
+      <h2>Friends</h2>
+        <ul>
+          <% for friendship in current_user.friendships %>
+              <li>
+                <%=h friendship.friend.email %>
+                (<%= link_to "remove", friendship, :method => :delete %>)
+              </li>
+          <% end %>
+        </ul>
     </div>
   </div>
 </div>
