--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,9 +1,15 @@
 <h2>All Users</h2>
 <ul>
   <% for user in @users %>
-      <li>
-        <%=h user.email %>
-        - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
-      </li>
+      <% if current_user.friendships.find(user.id) %>
+          <li>
+            <%=h user.email %> - Already Added
+          </li>
+      <% else %>
+          <li>
+            <%=h user.email %>
+            - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+          </li>
+      <% end %>
   <% end %>
 </ul>
