--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -30,3 +30,11 @@ h1 {
   display: inline;
   white-space: nowrap;
 }
+
+#bolt {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 35px;
+  display: inline;
+  white-space: nowrap;
+}
