--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,9 +1,10 @@
 <h2>All Users</h2>
 <ul>
   <% for user in @users %>
-      <% if current_user.friendships.find(user.id) %>
+      <% if !current_user.friendships.nil? %>
+<% if current_user.friendships.find(user.id) %>
           <li>
-            <%=h user.email %> - Already Added
+            <%=h user.email %> - (<%= link_to "remove",:method => :delete %>)
           </li>
       <% else %>
           <li>
@@ -11,5 +12,6 @@
             - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
           </li>
       <% end %>
+  <% end %>
   <% end %>
 </ul>
