--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,8 +6,14 @@ body {
 
 }
 
+.accountbar{
+  width: 550px;
+}
+
 .container{
   width: 550px;
+  outline: #38cc07 dotted medium;
+  padding-bottom: 40px;
 }
 
 .links {
