--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <![endif]-->
 </head>
 <body>
-<nav id="navbar" class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+<nav id="accountbar" class="navbar navbar-default navbar-fixed-top">
+  <div class="account">
     <section>
       <p class="navbar-text">
         <% if admin_signed_in? %>
