--- a/app/views/play/display_full_meter_choice.erb
+++ b/app/views/play/display_full_meter_choice.erb
@@ -1,10 +1,12 @@
-
-  <h1>Go for a trophy or challenge your opponent?</h1>
+<div class="text-center">
+  <h1>Go for a trophy or challenge your opponent?</h1><br><br>
+  <div id="meter">
   <button onclick="ChangePageTrophy()" type="button" class="btn btn-primary">
     Go For Trophy!</button>
   <button onclick="ChangePageChallenge()" type="button" class="btn btn-primary">
     Challenge!</button>
-
+  </div>
+</div>
   <script>
     function ChangePageTrophy() {
         $('body').load('/play/display_trophy_select.html');
