--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% for user in @users %>
       <% if current_user.friendships.count > 0 %>
-          <% if current_user.friendships.find(user.id) %>
+          <% if current_user.friendships.contains(user) %>
               <li>
                 <%=h user.email %> - (<%= link_to "remove",:method => :delete %>)
               </li>
@@ -11,7 +11,7 @@
       <% if user.id != current_user.id %>
           <li>
             <%=h user.email %>
-            - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+              <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
           </li>
       <% end %>
       <% end %>
