--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -1,10 +1,11 @@
 <div class="text-center">
+    <h1>How did you feel about that?</h1><br><br>
     <button id="fun" type="button" class="btn btn-primary btn-lg btn-block">
-      Fun!
+      Radical!
     </button>
     <br>
     <button id="boring" type="button" class="btn btn-primary btn-lg btn-block">
-      Boring!
+      Bummer...
     </button>
     <br>
     <button id="submit_question" type="button" class="btn btn-primary btn-lg btn-block">
