Changed bootstrap button colors

--- a/app/views/play/display_challenge_trophy_selection.erb
+++ b/app/views/play/display_challenge_trophy_selection.erb
@@ -1,4 +1,4 @@
-<button onclick="GoBack()" type="button" class="btn btn-primary">
+<button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
   BACK</button>
 <div id="main" class="text-center">
   <% if current_user.active_player.challenges.first.bid_trophy.nil? %>
