--- a/app/views/play/display_full_meter_choice.erb
+++ b/app/views/play/display_full_meter_choice.erb
@@ -1,9 +1,9 @@
 <div class="text-center">
   <h1>Go for a trophy or challenge your opponent?</h1><br><br>
   <div id="meter">
-  <button onclick="ChangePageTrophy()" type="button" class="btn btn-primary">
+  <button style="background-color: #2541c3"onclick="ChangePageTrophy()" type="button" class="btn btn-danger">
     Go For Trophy!</button>
-  <button onclick="ChangePageChallenge()" type="button" class="btn btn-primary">
+  <button style="background-color: #2541c3"onclick="ChangePageChallenge()" type="button" class="btn btn-danger">
     Challenge!</button>
   </div>
 </div>
