--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -1,14 +1,14 @@
 <div class="text-center">
     <h1>How did you feel about that?</h1><br><br>
-    <button id="fun" type="button" class="btn btn-primary btn-lg btn-block">
+    <button style="background-color: #2541c3"id="fun" type="button" class="btn btn-primary btn-lg btn-block">
       Radical!
     </button>
     <br>
-    <button id="boring" type="button" class="btn btn-primary btn-lg btn-block">
+    <button style="background-color: #2541c3"id="boring" type="button" class="btn btn-primary btn-lg btn-block">
       Bummer...
     </button>
     <br>
-    <button id="submit_question" type="button" class="btn btn-primary btn-lg btn-block">
+    <button style="background-color: #2541c3"id="submit_question" type="button" class="btn btn-primary btn-lg btn-block">
       Submit a Question!
     </button>
     <br>
