--- a/app/views/play/display_new_game_page.erb
+++ b/app/views/play/display_new_game_page.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div id="main" class="text-center">
-  <button onclick="PlayNow()" type="button" class="btn btn-primary btn-lg btn-block">
+  <button style="background-color: #2541c3" onclick="PlayNow()" type="button" class="btn btn-primary btn-lg btn-block">
     PLAY NOW</button>
 </div>
 
