--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -34,7 +34,7 @@ var spinSound=createSoundBite("/sounds/spin.mp3");
 var correctSound=createSoundBite("/sounds/correct.mp3");
 var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
 </script>
-<button onclick="GoBack()" type="button" class="btn btn-primary">
+<button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
   BACK</button><br>
 
 <% if !current_user.active_player.isActivePlayer
@@ -82,9 +82,9 @@ var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
           <img src= <%= trophy.icon_path%>>
       <% end %>
     <% else %>
-    <h3>Awaiting opponent</h3>
+    <h3>Awaiting opponent...</h3>
 <% end %>
-<br><br><button onclick="Resign()" type="button" class="btn btn-primary">
+<br><br><button style="background-color: #2541c3" onclick="Resign()" type="button" class="btn btn-primary">
   RESIGN</button>
 
 <script type ="text/javascript" charset="utf-8">
