--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,18 +1,13 @@
-<h2>All Users</h2>
-<ul>
-  <% for user in @users %>
-      <% if current_user.friendships.count > 0 %>
-          <% if current_user.friendships.find(user.id) %>
-              <li>
-                <%=h user.email %> - (<%= link_to "remove",:method => :delete %>)
-              </li>
-          <% end %>
-      <% end %>
-      <% if user.id != current_user.id %>
-          <li>
-            <%=h user.email %>
-            - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
-          </li>
-      <% end %>
-      <% end %>
-</ul>
+<div>
+  <h2>Users</h2>
+  <ul>
+    <% for user in @users %>
+        <% if user.id != current_user.id && () %>
+                <li>
+                  <%=h user.email %>
+                  - <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+                </li>
+            <% end %>
+    <% end %>
+  </ul>
+</div>
